# pywar

./: .gitattributes  .gitignore  .pylintrc  CONTRIBUTING.md  LICENSE  README.md  cspell.json  pyproject.toml  requirements.txt
.cspell/: project.txt  python.txt  workspace.txt
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
src/pywar/: card.py  deck.py  deck_test.py  game.py  game_test.py  main.py  test_card.py  test_deck.py
